cabal-version:      2.4
name:               maze-generator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            WTFPL
author:             Alexey Tarasov
maintainer:         tarasovion2004@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable maze-generator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Generator
                    , Generator.Branching
                    , Generator.Core
                    , Generator.Init
                    , Generator.Random
                    , Generator.Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base       ^>=4.14.3.0
                    , containers ^>=0.6.5.1
                    , array      ^>=0.5.4.0
                    , random     ^>=1.2.1.1
    hs-source-dirs:   app
    default-language: Haskell2010
